--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Project</h4>
+
+<h4 class="mt-3">Fill out the form below to create a new project</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card">
+    <div class="card-body col-8">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Project.Description" class="control-label"></label>
-                <input asp-for="Project.Description" class="form-control" />
+                <textarea asp-for="Project.Description" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Project.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -46,17 +46,19 @@
                 else
                 {
                     <img src="~/img/upload.png" id="imageFileData" alt="" width="200" height="200">}
-                <label class="btn btn-primary btn-sm text-light">
+                <label class="btn btn-success btn-sm text-light">
                     Change Avatar <input type="file" accept=".png,.jpg,.jpeg,.gif" asp-for="Project.ImageFormFile" onchange="document.getElementById('imageFileData').src= window.URL.createObjectURL(this.files[0])" hidden>
                 </label>
             </div>
 
             <div class="form-group">
                 <label class="control-label">ProjectManager</label>
-                <select asp-for="PmId" class="form-control" asp-items="@Model.PMList"></select>
+                <select asp-for="PmId" class="form-control" asp-items="@Model.PMList">
+                    <option>Select...</option>
+                </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <span> <input type="submit" value="Create" class="btn btn-success" /></span>
             </div>
         </form>
     </div>
