--- a/Views/Projects/MyProjects.cshtml
+++ b/Views/Projects/MyProjects.cshtml
@@ -32,7 +32,7 @@
             <div class="widget-header">
                 <div class="row">
                     <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                        <h4>My Projects</h4>
+                        <h4 class="text-center">My Projects</h4>
                     </div>
                 </div>
             </div>
