--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -394,92 +394,92 @@
         <!--  END SIDEBAR  -->
         <!--  BEGIN CONTENT AREA  -->
         <div id="content" class="main-content">
-            @*  <div class="layout-px-spacing">*@
-            @RenderBody()
+            <div class="layout-px-spacing">
+                @RenderBody()
+            </div>
+            <!--  END CONTENT AREA  -->
         </div>
-        <!--  END CONTENT AREA  -->
-    </div>
-    <!-- END MAIN CONTAINER -->
-    <!--<div id="zoomupModal" class="modal animated zoomInUp custo-zoomInUp" role="dialog">
-        <div class="modal-dialog">-->
-    <!--TICKET MODAL --------------->
-    <!--<div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">ADD TICKET</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p class="modal-text"></p>
-                </div>
-                <div class="modal-footer md-button">
-                    <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> Discard</button>
-                    <button type="button" class="btn btn-primary">Save</button>
+        <!-- END MAIN CONTAINER -->
+        <!--<div id="zoomupModal" class="modal animated zoomInUp custo-zoomInUp" role="dialog">
+            <div class="modal-dialog">-->
+        <!--TICKET MODAL --------------->
+        <!--<div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">ADD TICKET</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="modal-text"></p>
+                    </div>
+                    <div class="modal-footer md-button">
+                        <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> Discard</button>
+                        <button type="button" class="btn btn-primary">Save</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>-->
-    <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
-    <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
-    <script src="~/bootstrap/js/popper.min.js"></script>
-    <script src="~/bootstrap/js/bootstrap.min.js"></script>
-    <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-    <script src="~/assets/js/app.js"></script>
-    <script src="~/plugins/table/datatable/dt-custom-setting.js"></script>
-    <script src="~/plugins/table/datatable/custom_miscellaneous.js"></script>
-    <script src="~/plugins/table/datatable/datatables.js"></script>
-    <script>
-        $(document).ready(function () {
-            App.init();
-        });
-    </script>
-    <!--  BEGIN CUSTOM SCRIPT FILE  -->
-    @*<script src="~/assets/js/scrollspyNav.js"></script>*@
-    <script>
-        $('#yt-video-link').click(function () {
-            var src = 'https://www.youtube.com/embed/YE7VzlLtp-4';
-            $('#videoMedia1').modal('show');
-            $('<iframe>').attr({
-                'src': src,
-                'width': '560',
-                'height': '315',
-                'allow': 'encrypted-media'
-            }).css('border', '0').appendTo('#videoMedia1 .video-container');
-        });
-        $('#vimeo-video-link').click(function () {
-            var src = 'https://player.vimeo.com/video/1084537';
-            $('#videoMedia2').modal('show');
-            $('<iframe>').attr({
-                'src': src,
-                'width': '560',
-                'height': '315',
-                'allow': 'encrypted-media'
-            }).css('border', '0').appendTo('#videoMedia2 .video-container');
-        });
-        $('#videoMedia1 button, #videoMedia2 button').click(function () {
-            $('#videoMedia1 iframe, #videoMedia2 iframe').removeAttr('src');
-        });
-    </script>
-    <!--  END CUSTOM SCRIPT FILE  -->
-    <script src="~/assets/js/custom.js"></script>
-    <!-- END GLOBAL MANDATORY SCRIPTS -->
-    <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-    <script src="~/plugins/apex/apexcharts.min.js"></script>
-    <script src="~/assets/js/dashboard/dash_1.js"></script>
-    <!-- BEGIN PAGE LEVEL SCRIPTS -->
-    <script src="~/assets/js/scrollspyNav.js"></script>
-    <script src="~/plugins/tagInput/tags-input.js"></script>
-    <!-- END PAGE LEVEL SCRIPTS -->
+        </div>-->
+        <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
+        <script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
+        <script src="~/bootstrap/js/popper.min.js"></script>
+        <script src="~/bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+        <script src="~/assets/js/app.js"></script>
+        <script src="~/plugins/table/datatable/dt-custom-setting.js"></script>
+        <script src="~/plugins/table/datatable/custom_miscellaneous.js"></script>
+        <script src="~/plugins/table/datatable/datatables.js"></script>
+        <script>
+            $(document).ready(function () {
+                App.init();
+            });
+        </script>
+        <!--  BEGIN CUSTOM SCRIPT FILE  -->
+        @*<script src="~/assets/js/scrollspyNav.js"></script>*@
+        <script>
+            $('#yt-video-link').click(function () {
+                var src = 'https://www.youtube.com/embed/YE7VzlLtp-4';
+                $('#videoMedia1').modal('show');
+                $('<iframe>').attr({
+                    'src': src,
+                    'width': '560',
+                    'height': '315',
+                    'allow': 'encrypted-media'
+                }).css('border', '0').appendTo('#videoMedia1 .video-container');
+            });
+            $('#vimeo-video-link').click(function () {
+                var src = 'https://player.vimeo.com/video/1084537';
+                $('#videoMedia2').modal('show');
+                $('<iframe>').attr({
+                    'src': src,
+                    'width': '560',
+                    'height': '315',
+                    'allow': 'encrypted-media'
+                }).css('border', '0').appendTo('#videoMedia2 .video-container');
+            });
+            $('#videoMedia1 button, #videoMedia2 button').click(function () {
+                $('#videoMedia1 iframe, #videoMedia2 iframe').removeAttr('src');
+            });
+        </script>
+        <!--  END CUSTOM SCRIPT FILE  -->
+        <script src="~/assets/js/custom.js"></script>
+        <!-- END GLOBAL MANDATORY SCRIPTS -->
+        <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
+        <script src="~/plugins/apex/apexcharts.min.js"></script>
+        <script src="~/assets/js/dashboard/dash_1.js"></script>
+        <!-- BEGIN PAGE LEVEL SCRIPTS -->
+        <script src="~/assets/js/scrollspyNav.js"></script>
+        <script src="~/plugins/tagInput/tags-input.js"></script>
+        <!-- END PAGE LEVEL SCRIPTS -->
 
-    <script>
-        var instance = new TagsInput({
-            selector: 'skill-input'
-        });
-        instance.addData(['PHP', 'Wordpress', 'Javascript', 'jQuery'])
-    </script>
+        <script>
+            var instance = new TagsInput({
+                selector: 'skill-input'
+            });
+            instance.addData(['PHP', 'Wordpress', 'Javascript', 'jQuery'])
+        </script>
 
-    <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-    @RenderSection("scripts", required: false)
+        <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
+        @RenderSection("scripts", required: false)
 </body>
 </html>
