--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>Ticket</h4>
+<h4 class="mt-4">Edit This Ticket Below</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+<div class="Card">
+    <div class="card-body col-8">
+        <form class="card-body" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ProjectId" />
@@ -24,54 +23,33 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea rows="5" asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                    <label asp-for="Created" class="control-label"></label>
-                    <input asp-for="Created" class="form-control" />
-                    <span asp-validation-for="Created" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Updated" class="control-label"></label>
-                    <input asp-for="Updated" class="form-control" />
-                    <span asp-validation-for="Updated" class="text-danger"></span>
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
-                    </label>
-                </div>*@
-            @*<div class="form-group">
-                    <label asp-for="ProjectId" class="control-label"></label>
-                    <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                    <span asp-validation-for="ProjectId" class="text-danger"></span>
-                </div>*@
+           
             <div class="form-group">
                 <label asp-for="TicketTypeId" class="control-label"></label>
-                <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId">
+                    <option>Select...</option>
+                </select>
                 <span asp-validation-for="TicketTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TicketPriorityId" class="control-label"></label>
-                <select asp-for="TicketPriorityId" class="form-control" asp-items="ViewBag.TicketPriorityId"></select>
-                <span asp-validation-for="TicketPriorityId" class="text-danger"></span>
+                <select asp-for="TicketPriorityId" class="form-control" asp-items="ViewBag.TicketPriorityId">
+                <option>Select...</option>
+                </select>
+                <span asp-validation-for="TicketPriorityId" class="text-danger">
+                </span>
             </div>
             <div class="form-group">
                 <label asp-for="TicketStatusId" class="control-label"></label>
-                <select asp-for="TicketStatusId" class="form-control" asp-items="ViewBag.TicketStatusId"></select>
+                <select asp-for="TicketStatusId" class="form-control" asp-items="ViewBag.TicketStatusId">
+                    <option>Select...</option>
+                </select>
                 <span asp-validation-for="TicketStatusId" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                    <label asp-for="OwnerUserId" class="control-label"></label>
-                    <select asp-for="OwnerUserId" class="form-control" asp-items="ViewBag.OwnerUserId"></select>
-                    <span asp-validation-for="OwnerUserId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DeveloperUserId" class="control-label"></label>
-                    <select asp-for="DeveloperUserId" class="form-control" asp-items="ViewBag.DeveloperUserId"></select>
-                    <span asp-validation-for="DeveloperUserId" class="text-danger"></span>
-                </div>*@
+           
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
