--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -1,173 +1,179 @@
 ﻿@model IEnumerable<TitanTracker.Models.Ticket>
 @using TitanTracker.Models.Enums
+@using TitanTracker.Services.Interfaces
+@using TitanTracker.Extensions
+@using Microsoft.AspNetCore.Identity
+
+@inject IBTTicketService TicketService
+@inject UserManager<BTUser> UserManager
 
 @{
     ViewData["Title"] = "Index";
+    BTUser user = await UserManager.GetUserAsync(User);
+    int companyId =  User.Identity.GetCompanyId().Value;
 }
 <!-- BEGIN PAGE LEVEL STYLES -->
-<link href="~/plugins/drag-and-drop/dragula/dragula.css" rel="stylesheet" type="text/css" />
-<link href="~/plugins/drag-and-drop/dragula/example.css" rel="stylesheet" type="text/css" />
-<!-- END PAGE LEVEL STYLES -->
+<link rel="stylesheet" type="text/css" href="~/assets/css/forms/theme-checkbox-radio.css">
+<link href="~/plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/apps/contacts.css" rel="stylesheet" type="text/css" />
+<!-- END PAGE LEVEL STYLES -->   
+ <div class="col-lg-12">
+    <div class="widget-content searchable-container list">
 
-<div class="col-lg-12 layout-spacing">
-    <div class="statbox widget box box-shadow">
-        <div class="widget-header">
-            <div class="row">
-                <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                    <h4>All Projects</h4>
-                </div>
+        <div class="row mt-3">
+            <div class="col-xl-4 col-lg-5 col-md-5 col-sm-7 filtered-list-search layout-spacing align-self-center">
+                <form class="form-inline my-2 my-lg-0">
+                    <div class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                        <input type="text" class="form-control product-search" id="input-search" placeholder="Search Tickets...">
+                    </div>
+                </form>
             </div>
-        </div>
-        <div class="widget-content widget-content-area">
 
-            <div class='parent ex-4'>
-                <div class='row'>
+            <div class="col-xl-8 col-lg-7 col-md-7 col-sm-5 text-sm-right text-center layout-spacing align-self-center">
+                <div class="d-flex justify-content-sm-end justify-content-center">
+                    <button class="btn btn-success" data-toggle="modal" data-target="#notesMailModal">Add Ticket</button>
+                    <div class="switch align-self-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list view-list active-view"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3" y2="6"></line><line x1="3" y1="12" x2="3" y2="12"></line><line x1="3" y1="18" x2="3" y2="18"></line></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-grid view-grid"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
+                    </div>
+                </div>
 
-                    <div class="col-md-6">
-                        <div id='left-rollbacks' class='dragula'>
-                            @foreach (var item in Model)
-                            {
-                                <div class="card post text-post" style="">
-                                    <div class="card-body">
-                                        <div class="media user-meta d-sm-flex d-block text-sm-left text-center">
-                                            <img class="" src="~/assets/img/120x120.jpg" alt="avatar">
-                                            <div class="media-body">
-                                                <h5 class=""> @Html.DisplayFor(model => item.Title)</h5>
-                                                <p class="meta-time"> @Html.DisplayFor(model => item.Created)</p>
-                                            </div>
-                                        </div>
-
-                                        <div class="post-content  text-sm-left text-center">
-                                            <p>
-                                               @Html.DisplayFor(model => item.Description)
-                                            </p>
-                                        </div>
-                                        <div class="row people-liked-post">
-                                            <div class="col-sm-5 text-sm-left text-center">
-                                                <ul class="list-inline people-liked-img">
-                                                    <li class="list-inline-item chat-online-usr">
-                                                        <img alt="avatar" src="~/assets/img/90x90.jpg" class="">
-                                                    </li>
-                                                    <li class="list-inline-item chat-online-usr">
-                                                        <img alt="avatar" src="~/assets/img/90x90.jpg">
-                                                    </li>
-                                                    <li class="list-inline-item chat-online-usr">
-                                                        <img alt="avatar" src="~/assets/img/90x90.jpg">
-                                                    </li>
-                                                    <li class="list-inline-item chat-online-usr">
-                                                        <img alt="avatar" src="~/assets/img/90x90.jpg">
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                            <div class="col-sm-7 text-sm-right text-center">
-                                                <div class="people-liked-post-name">
-                                                    <span><a href="">Created By: @Html.DisplayFor(model => item.OwnerUser.FullName)</a> and 19 other like this</span>
+                <!-- Modal -->
+                <div class="modal fade" id="notesMailModal" tabindex="-1" role="dialog" aria-labelledby="notesMailModalTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x close" data-dismiss="modal"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                                <div class="notes-box">
+                                    <div class="notes-content">
+                                        <form id="notesMailModalTitle" method="post">
+                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                            <p class="text-center">Fill out the form to add a new ticket</p>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <div class="d-flex note-title">
+                                                        <input name="Title" type="text" required class="form-control" maxlength="25" placeholder="Title*">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-12 mt-2">
+                                                    <div class="d-flex note-description">
+                                                        <textarea name="Description" required id="n-description" class="form-control" maxlength="60" placeholder="Description*" rows="3"></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-12 mt-2">
+                                                    <div class="d-flex note-title">
+                                                        <select name="ProjectId" type="text" required class="form-control" asp-items="ViewBag.ProjectId" maxlength="25" placeholder="Project*">
+                                                            <option>Project*</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-12 mt-2">
+                                                    <div class="d-flex note-title">
+                                                        <select name="TicketPriorityId" type="text" asp-items="ViewBag.TicketPriorityId" required class="form-control" maxlength="25" placeholder="Priority*">
+                                                            <option>Priority*</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-12 mt-2">
+                                                    <div class="d-flex note-title">
+                                                        <select name="TicketTypeId" type="text" required class="form-control" maxlength="25" asp-items="ViewBag.TicketTypeId" placeholder="Type*">
+                                                            <option>Ticket Type*</option>
+                                                        </select>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </form>
                                     </div>
                                 </div>
-                            }
-
-
                             </div>
+                            <div class="modal-footer">
+                                <button class="btn" data-dismiss="modal"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg> Discard</button>
+                                <a href="javascript:document.getElementById('notesMailModalTitle').submit()" class="btn btn-primary">Create</a>
+                            </div>
+                        </div>
                     </div>
 
 
                 </div>
             </div>
+            @*<-------------End Modal---------------->*@
+            @*@if ((await TicketService.GetTicketsByUserIdAsync(user.Id, companyId)).Count() == 0)
+            {
+                <tr>
+                    <td class="text-center" colspan="5">No Tickets Found.</td>
+                </tr>
 
-           
+            }
+            else
+            {*@
+                <div class="searchable-items list col-12">
+                    <div class="items items-header-section">
+                        <div class="item-content">
+                            <div class="">
+                                <div class="n-chk align-self-center text-center">
+                                    <label class="new-control new-checkbox checkbox-primary">
+                                        <input type="checkbox" class="new-control-input" id="contact-check-all">
+                                        <span class="new-control-indicator"></span>
+                                    </label>
+                                </div>
+                                <h4>Name</h4>
+                            </div>
+                            <div class="user-email">
+                                <h4>Type</h4>
+                            </div>
+                            <div class="user-location">
+                                <h4 style="margin-left: 0;">Priority</h4>
+                            </div>
+                            <div class="user-phone">
+                                <h4 style="margin-left: 3px;">Creator</h4>
+                            </div>
+                            <div class="action-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2  delete-multiple"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                            </div>
+                        </div>
+                    </div>
+                    @foreach (var item in Model)
+                    {
+                        <div class="items">
+                            <div class="item-content col-12">
+                                <div class="user-profile">
+                                    
+                                    @*<img src="~/assets/img/90x90.jpg" alt="avatar">*@
+                                    <div class="user-meta-info">
+                                        <p class="user-name">@Html.DisplayFor(model => item.Title)</p>
+                                        <p class="user-work" data-occupation="Web Developer">@Html.DisplayFor(model => item.OwnerUser.FullName)</p>
+                                    </div>
+                                </div>
+                                <div class="user-email">
+                                    <p class="info-title">Ticket Priority: </p>
+                                    <p class="usr-email-addr text-center">@Html.DisplayFor(model => item.TicketPriority.Name)</p>
+                                </div>
+                                <div class="user-location">
+                                    <p class="info-title">Ticket Type: </p>
+                                    <p class="usr-location">@Html.DisplayFor(model => item.TicketType.Name)</p>
+                                </div>
+                                <div class="user-phone">
+                                    <p class="info-title">Description: </p>
+                                    <p class="usr-ph-no">@Html.DisplayFor(model => item.Description)</p>
+                                </div>
+                                <div class="action-btn">
+                                    <a asp-action="Edit" asp-controller="Tickets" asp-route-id="@item.Id"> <svg class="rounded bs-tooltip" title="edit this ticket" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2 edit"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></a>
+                                    <a asp-action="Details" asp-controller="Tickets" asp-route-id="@item.Id"><button class="btn btn-success rounded bs-tooltip" title="Veiw Ticket Detials">Details</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    }
+
+                </div>
+            
 
         </div>
     </div>
-</div>
+    @section scripts
+    {
+        <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
+        <script src="~/assets/js/apps/contact.js"></script>
+    }
 
-
-@*<h1>Index</h1>
-
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Created)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Updated)
-                </th>
-
-                <th>
-                   Priority
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Project)
-                </th>
-                <th>
-                   Type
-                </th>
-                <th>
-                  Status
-                </th>
-                <th>
-                  Submitter
-                </th>
-                <th>
-                   Developer
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Created)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Updated)
-                    </td>
-
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketPriorityId)
-
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Project.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketType.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketStatus.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.OwnerUser.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DeveloperUser.FullName)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>*@
+  
